--- a/mall/pom.xml
+++ b/mall/pom.xml
@@ -42,6 +42,13 @@
       <artifactId>pagehelper</artifactId>
       <version>6.1.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>5.2.25.RELEASE</version>
+    </dependency>
+
 
   </dependencies>
   <build>
